--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="translate_service1">Yandex</string>
     <string name="translate_service2">MyMemory</string>
     <string name="translate_service3">SysTran</string>
+    <string name="clear_text">Clear text</string>
 </resources>
