--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="translate_service2">MyMemory</string>
     <string name="translate_service3">SysTran</string>
     <string name="clear_text">Clear text</string>
+    <string name="tts_translate_text_button_text">TTS Translate Text</string>
 </resources>
